--- a/index.html
+++ b/index.html
@@ -7,7 +7,91 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <script>
+        let money = +prompt("Ваш бюджет на месяц?", ''),
+            time = prompt('Введите дату в формате YYYY-MM-DD', '');
+
+        let appData = {
+            budget: money,
+            expenses: {},
+            optionalExpenses: {},
+            income: [],
+            timeData: time,
+            savings: false
+        };
+
+        // Цикл WHILE
+
+        // let i = 0;
+        // while (i < 2) {
+        //     console.log(i);
+        //     i++;
+        //     let a = prompt("Введите обязательную статью расходов в этом месяце", ''),
+        //         b = prompt("Во сколько обойдется?", '');
+
+        //     if ((typeof(a)) === 'string' && (typeof(a)) != null && (typeof(b)) != null &&
+        //         a != '' && b != '' && a.length < 50) {
+        //         console.log("done");
+
+        //         appData.expenses[a] = b;
+        //     } else { 
+        //         console.log("Bad result") 
+        //         i--
+        //     }
+
+        // };
+
+
+
+        //Цикл DO
+        // let i = 0;
+        // do {
+        //     console.log(i);
+        //     let a = prompt("Введите обязательную статью расходов в этом месяце", ''),
+        //         b = prompt("Во сколько обойдется?", '');
+
+        //     if ((typeof(a)) === 'string' && (typeof(a)) != null && (typeof(b)) != null &&
+        //         a != '' && b != '' && a.length < 50) {
+        //         console.log("done");
+        //         appData.expenses[a] = b;
+        //     } else { 
+        // console.log("Bad resuly")
+        // i--
+        //     }
+        //i++;
+        // }
+        // while (i < 2);
+
+        for (let i = 0; i < 2; i++) {
+            let a = prompt("Введите обязательную статью расходов в этом месяце", ''),
+                b = prompt("Во сколько обойдется?", '');
+
+            if ((typeof(a)) === 'string' && (typeof(a)) != null && (typeof(b)) != null &&
+                a != '' && b != '' && a.length < 50) {
+                console.log("done");
+                appData.expenses[a] = b;
+            } else {
+                console.log("Bad result"); {
+                    i--
+                }
+
+            }
+
+        };
+        appData.moneyPerDay = appData.budget / 30;
+
+        alert("Ежедневный бюджет :" + appData.moneyPerDay);
+        if (appData.moneyPerDay < 100) {
+            console.log("Минимальный уровень достатка")
+        } else if (appData.moneyPerDay > 100 && appData.moneyPerDay < 2000) {
+            console.log("Средний уровень достатка")
+        } else if (appData.moneyPerDay > 2000) {
+            console.log("Высокий уровень достатка")
+        } else {
+            console.log("Произашла ошибка")
+        }
+    </script>
+
 </body>
 
 </html>
